<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/demo"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/demo"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/demo"
        android:title="@string/menu_slideshow" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/demo"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/nav_prayers"
        android:icon="@drawable/demo"
        android:title="@string/menu_prayers" />

    <item
        android:id="@+id/nav_donations"
        android:icon="@drawable/demo"
        android:title="@string/menu_donations" />
    <item
        android:id="@+id/nav_download"
        android:icon="@drawable/demo"
        android:title="@string/menu_download" />
</menu>