<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
   >
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

    <LinearLayout

        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"

       >
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/enter_your_detail"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_marginBottom="32dp"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/hidepassword"
            android:inputType="textVisiblePassword"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />

<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background=""/>
    </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
