<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="22dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/mTvNavHeaderEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/circular"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/text_color_card"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toEndOf="@+id/mIvNavProfile"
        app:layout_constraintTop_toBottomOf="@+id/mTvNavHeaderName" />


    <TextView
        android:id="@+id/mTvNavHeaderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/nav_header_title"
        android:textColor="@color/text_color_card"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toEndOf="@+id/mIvNavProfile"
        app:layout_constraintTop_toTopOf="@+id/guideline112" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp" />

    <ImageView
        android:id="@+id/mIvNavProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_add_profile_default_profile"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline112"
        app:strokeColor="@android:color/white" />

    <ImageView
        android:id="@+id/mIvLogout"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/mIvNotification"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mIvNotification"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="7dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bell_a"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/mIvLogout"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
