<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_std_bold"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />


        <RelativeLayout
            android:id="@+id/rlName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/tvHeader"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_white_corner_shape">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/user" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@+id/imgUser"
                android:background="@null"
                android:hint="Name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/rlName"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_white_corner_shape">

            <ImageView
                android:id="@+id/imgUserEmail"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/email" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@+id/imgUserEmail"
                android:background="@null"
                android:hint="@string/enter_your_detail"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlphone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/rlEmail"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_white_corner_shape">

            <ImageView
                android:id="@+id/imgUserPhone"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_phone" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@+id/imgUserPhone"
                android:background="@null"
                android:hint="Phone"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/rlphone"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_white_corner_shape">

            <ImageView
                android:id="@+id/imgUserPass"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_password" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@+id/imgUserPass"
                android:background="@null"
                android:hint="@string/hidepassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlcpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/rlPass"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_white_corner_shape">

            <ImageView
                android:id="@+id/imgUsercPass"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_password" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etcPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@+id/imgUsercPass"
                android:background="@null"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlregister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/rlcpass"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/round_corner_shape">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/circular_std_bold"
                android:gravity="center"
                android:text="Register Now"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/left_arrow"
                app:tint="@color/white" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlsign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlregister"
            android:layout_marginTop="@dimen/_50sdp">

            <TextView
                android:id="@+id/rlBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/circular_std_bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/createhaveAccount"
                android:textSize="@dimen/_14sdp" />


        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
