<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/mTvNavHeaderEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/circular"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/nav_header_subtitle"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toEndOf="@+id/mIvNavProfile"
            app:layout_constraintTop_toBottomOf="@+id/mTvNavHeaderName" />


        <TextView
            android:id="@+id/mTvNavHeaderName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/circular_std_bold"
            android:text="@string/nav_header_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toEndOf="@+id/mIvNavProfile"
            app:layout_constraintTop_toTopOf="@+id/guideline112" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline112"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <ImageView
            android:id="@+id/mIvNavProfile"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_add_profile_default_profile"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline112"
            app:strokeColor="@android:color/white" />


        <ImageView
            android:id="@+id/mIvNotification"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="7dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bell_a"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline112" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_22sdp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_22sdp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dotted_box"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/clHeader"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnReq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/circular_std_bold"
            android:text="Request prayer"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeaderSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_grey_corner_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clHeader1"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imgUserSearch"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPass"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@null"
            android:fontFamily="@font/circular"
            android:hint="Search"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgUserSearch"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_9sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginBottom="10dp"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clHeaderSearch">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:ignore="MissingConstraints">

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    custom:auto_cycle="true"
                    custom:indicator_visibility="visible"
                    custom:pager_animation="Accordion"
                    custom:pager_animation_span="1100" />


                <com.daimajia.slider.library.Indicators.PagerIndicator
                    android:id="@+id/custom_indicator2"
                    style="@style/AndroidImageSlider_Corner_Oval_Orange"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp" />


            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRvHomeLocalContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:nestedScrollingEnabled="true"
                android:visibility="visible"
                tools:listitem="@layout/item_watch_list" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/noInternetLayout"
        layout="@layout/no_internet_dialog"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>